<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/menu_people" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friend_black_24dp"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/ic_menu_route"
            android:title="@string/menu_routes" />
    </group>

    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/nav_account_details"
                android:icon="@drawable/ic_menu_account_details"
                android:title="@string/menu_account_details" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />

            <item
                android:id="@+id/nav_remove_account"
                android:icon="@drawable/ic_menu_remove_account"
                android:title="@string/menu_remove_account" />
        </menu>
    </item>

</menu>
