<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sammilward.socialtravelerandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_people"
        android:name="com.sammilward.socialtravelerandroid.ui.people.PeopleFragment"
        android:label="@string/menu_people"
        tools:layout="@layout/fragment_people" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.sammilward.socialtravelerandroid.ui.friends.FriendsFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/nav_routes"
        android:name="com.sammilward.socialtravelerandroid.ui.routes.RoutesFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/fragment_routes" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.sammilward.socialtravelerandroid.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_account_details"
        android:name="com.sammilward.socialtravelerandroid.ui.accountDetails.AccountDetailsFragment"
        android:label="@string/menu_account_details"
        tools:layout="@layout/fragment_account_details" />
</navigation>